Scroll[Substring]ToPoint does not work with screen-relative coordinates

When screen relative coordinates are passed in, do not alter
them, they are already correct.

Note: compare with results in "Better failing test" patchset 3.

Bug: 889491
Change-Id: I7618aab997f01cca20d6c712385e19beff331647
Reviewed-on: https://chromium-review.googlesource.com/1246321
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594779}
Former-commit-id: 1534ee3f78289e6b9c54486e1f11eb39d9e9e105